--- a/circles.css
+++ b/circles.css
@@ -43,8 +43,8 @@
 
   .boss {
     position: absolute;
-    width: 3.3%;
-    padding-top: 3.3%;
+    width: 6.6%;
+    padding-top: 6.6%;
     background-color: rgb(174, 17, 174);
     border: 4px solid rgb(134, 12, 134);
     border-radius: 50%;
@@ -130,6 +130,16 @@
     animation: perperation 0.5s linear, moveWarningCircle 1.5s linear;
     animation-delay: 0s, 0.5s;
     cursor: pointer;
+}
+
+.cyanCircle {
+  position: absolute;
+  width: 3.3%;
+  padding-top: 3.3%;
+  background-color: cyan;
+  border: 4px solid rgb(0, 195, 195);
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 .grayCircle {
