--- a/styles.css
+++ b/styles.css
@@ -168,11 +168,32 @@ body {
     }
     60% {
       background-color: red;
-      border-color: rgb(199, 0, 0);
+      border-color: rgb(177, 0, 0);
     }
     100% {
       background-color: red;
-      border-color: rgb(199, 0, 0);
+      border-color: rgb(177, 0, 0);
+      left: -10px;
+    }
+  }
+
+  @keyframes moveAndSwitchYellow {
+    0% {
+      background-color: #ffd900;
+      border: 4px solid #d0b100;
+      left: 100%;
+    }
+    40% {
+      background-color: #ffd900;
+      border: 4px solid #d0b100;
+    }
+    60% {
+      background-color: #0000ff;
+      border: 4px solid #0000c0;
+    }
+    100% {
+      background-color: #0000ff;
+      border: 4px solid #0000c0;
       left: -10px;
     }
   }
