--- a/styles.css
+++ b/styles.css
@@ -30,13 +30,13 @@ body {
   #score,
   #level,
   #violetButton,
-  #superLineButton {
+  #superLineButton,
+  #pinkButton {
     display: none;
     font-family: 'circles';
   }
 
   #superLineButton {
-    font-family: 'circles';
     color: white;
     position: absolute;
     width: 5.8%;
@@ -45,7 +45,23 @@ body {
     padding-top: 2%;
     background-color: #949494;
     border: 4px solid #6c6c6c;
-    font-size: 350%;
+    font-size: 300%;
+    text-align: center;
+    padding: 7px 10px;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+
+  #pinkButton {
+    color: white;
+    position: absolute;
+    width: 5.8%;
+    right: 13%;
+    padding-top: 2%;
+    top: 0;
+    background-color: #949494;
+    border: 4px solid #6c6c6c;
+    font-size: 300%;
     text-align: center;
     padding: 7px 10px;
     border-radius: 10px;
@@ -53,7 +69,6 @@ body {
   }
 
   #violetButton {
-    font-family: 'circles';
     color: white;
     position: absolute;
     width: 5.8%;
@@ -62,7 +77,7 @@ body {
     top: 0;
     background-color: #949494;
     border: 4px solid #6c6c6c;
-    font-size: 350%;
+    font-size: 300%;
     text-align: center;
     padding: 7px 10px;
     border-radius: 10px;
