--- a/circles.css
+++ b/circles.css
@@ -3,9 +3,9 @@
     position: absolute;
     right: 0;
     top: 0;
-    width: 80px;
+    width: 10%;
     height: 100vh;
-    background-color: rgb(93, 0, 255);
+    background-color: rgb(71, 71, 71);
   }
 
   .sapphireCircle {
@@ -160,7 +160,7 @@
     background-color: #949494;
     border: 4px solid #6c6c6c;
     border-radius: 50%;
-    animation: moveGrayCircle 7.2s linear;
+    animation: moveGrayCircle 6.8s linear;
     cursor: pointer;
 }
 
