--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,86 @@
 body {
     overflow: hidden;
-  }
-  .redLine {
-    position: absolute;
+}
+
+#layout {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0;
+    height: 100vh;
+}
+
+.redLine {
+    position: fixed;
     left: 0;
     top: 0;
     width: 10px;
-    height: 100vh;
+    height: 100%;
     background-color: red;
     cursor: alias;
-  }
+}
 
-  #startButton {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 10px 20px;
+#startButton {
+    padding: 1.5%;
     color: white;
-    font-size: 30px;
+    font-size: 300%;
     font-family: 'circles';
     background-color: rgb(183, 23, 183);
     border: 4px solid rgb(152, 18, 152);
     border-radius: 10px;
     cursor: pointer;
-  }
+    text-align: center;
+    margin: 1%;
+}
 
-  #health,
-  #score,
-  #level,
-  #violetButton,
-  #superLineButton,
-  #pinkButton {
+#statsButton, #optionsButton {
+    padding: 1.5%;
+    color: white;
+    font-size: 300%;
+    font-family: 'circles';
+    background-color: #949494;
+    border: 4px solid #6c6c6c;
+    border-radius: 10px;
+    cursor: pointer;
+    text-align: center;
+    margin: 1%;
+}
+
+#health,
+#score,
+#level,
+#violetButton,
+#superLineButton,
+#pinkButton,
+#backButton,
+#resetStats,
+#ressistanceButton {
     display: none;
     font-family: 'circles';
-  }
+}
 
   #superLineButton {
     color: white;
     position: absolute;
     width: 5.8%;
     right: 6.5%;
+    top: 0;
+    padding-top: 2%;
+    background-color: #949494;
+    border: 4px solid #6c6c6c;
+    font-size: 300%;
+    text-align: center;
+    padding: 7px 10px;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+
+  #ressistanceButton {
+    color: white;
+    position: absolute;
+    width: 5.8%;
+    right: 19.5%;
     top: 0;
     padding-top: 2%;
     background-color: #949494;
@@ -96,6 +136,25 @@ body {
     margin-left: 5px;
   }
 
+  #backButton {
+    position: fixed;
+    color: white;
+    padding: 1%;
+    font-size: 25px;
+    background-color: red;
+    border: 4px solid rgb(199, 0, 0);
+    border-radius: 10px;
+    width: 11%;
+    text-align: center;
+    left: 1%;
+    bottom: 0;
+    cursor: pointer;
+  }
+
+  #disableImpostors {
+    font-family: 'circles';
+  }
+
   #score {
     color: #ffffff;
     padding: 7px 10px;
@@ -119,6 +178,32 @@ body {
     width: 50px;
     text-align: center;
     margin-left: 5px;
+  }
+
+  #stats, #options {
+    color: white;
+    background-color: rgb(58, 58, 58);
+    border: 5px solid black;
+    border-radius: 10px;
+    padding: 1%;
+    display: none;
+    font-family: 'circles';
+    font-size: 200%;
+    text-align: center;
+    margin: 1%;
+  }
+
+  #resetStats {
+    color: white;
+    padding: 1%;
+    font-size: 25px;
+    background-color: red;
+    border: 4px solid rgb(199, 0, 0);
+    border-radius: 10px;
+    width: 11%;
+    text-align: center;
+    margin: 1%;
+    cursor: pointer;
   }
 
   @font-face {
@@ -153,9 +238,24 @@ body {
     }
   }
 
+  @keyframes warning {
+    25% {
+      background-color: white;
+    }
+    50% {
+      background-color: red;
+    }
+    75% {
+      background-color: red;
+    }
+    100% {
+      background-color: white;
+    }
+  }
+
   @keyframes moveGrayCircle {
     from {
-      left: 90%;
+      left: 85%;
     }
     to {
       left: -10px;
